<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left|top"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="?dividerVertical"
    android:id="@+id/linearLayout"
    >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="32sp"
        android:text="@string/viewName"/>

    <EditText
        android:id="@+id/etext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:textSize="32sp"
        android:textColor="#c4c1c6"
        android:text="@string/EditName"
        android:layout_gravity="bottom"
        />
    <EditText
        android:id="@+id/etext2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:textSize="32sp"
        android:text="@string/EditName2"
        android:textColor="#c4c1c6"
        android:layout_gravity="bottom"
        android:gravity="left|top"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName"
        android:layout_margin="16dp"
        android:textColor="#ffffffff"
        android:textSize="24sp"
        android:layout_gravity="right|bottom"
        android:background="#a100ff"
        />
</LinearLayout>